# gsqueal

./: Cargo.toml  LICENSE.md  README.md  package.json
src/: error.rs  lib.rs  log.rs  store.rs  utils.rs
src/commands/: network.rs
src/models/: cli.rs  google.rs  mod.rs
